fix scroll issue on mobile view and add item count on cart btn

--- a/style.css
+++ b/style.css
@@ -669,6 +669,20 @@ body {
 
 }
 
+.mobile_counter {
+    background-color: white;
+    color: var(--orange-main);
+    border-radius: 50%;
+    padding: 2px 8px;
+    margin-left: 8px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.mobile_counter.d_none {
+    display: none;
+}
+
 
 @media(max-width: 1000px) {
 
