--- a/styles/standard.css
+++ b/styles/standard.css
@@ -39,3 +39,7 @@ h6 {
 a {
     text-decoration: none;
 }
+
+body.no_scroll {
+    overflow: hidden;
+}
